syntax = "proto3";

package common;
import "common/common.proto";
import "google/protobuf/timestamp.proto";
option go_package = "lightflus/proto/event";
option java_package = "lightflus.proto.common.event";

// Event that keyed transferred between operators
// KeyedDataEvent can be traced in a distributed system with event id
message KeyedDataEvent {
  // key of data event
  common.Entry key = 2;
  // operator_id this event will be sent
  uint32 to_operator_id = 3;
  // mandatory
  repeated common.Entry data = 5;
  // event time
  int64 event_time = 6;
  // operator_id this event where be sent
  uint32 from_operator_id = 7;

  message Window {
    int64 start_time = 1;
    int64 end_time = 2;
  }

  // the window of this event
  Window window = 8;
  // event id, generated by source
  int64 event_id = 9;
}

message Entry {
  DataTypeEnum data_type = 1;
  bytes value = 2; // entry value
}